Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
Description
Petzold Whatsize.exe testcase doesn't work properly in ReactOS.
As you can see in the screenshot, seems that TWIPS is in a really big size(maybe written over the other strings).
I will try to remove the TWIPS line in order to see if at least the previous ones are correctly painted or if them are too big too.
More info coming soon.
Attachments
Issue Links
- blocks
-
CORE-7153 METABUG: Petzold's Testcases
-
- Open
-