[WIN32K] Only scale characters with the world-to-device transform, when the graphics mode is GM_ADVANCED. Fixes Petzold's WhatSize testapp. CORE-7154 #resolve

svn path=/trunk/; revision=69782